--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -11,4 +11,4 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v1
         with:
-          start: npm start
+          start: npm run serve
